# C-Anemone

./: .gitignore  CMakeLists.txt  LICENSE  globals.h  include.h  instances.c  instances.h  main.c  sds_LICENSE
engine/: ctrl.c  ctrl.h  dev.c  dev.h  gfx.c  gfx.h  input.c  input.h  ui.c  ui.h  utils.c  utils.h  video.c  video.h  window.c  window.h
levels/: level_test_one.c  level_test_one.h  level_test_two.c  level_test_two.h
objects/: blueguy.c  blueguy.h  brush.c  brush.h  guy.c  guy.h
